[package]
name = "ironmonger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
dotenvy = "0.15"
mac_address = "1.1"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"
regex = "1.11.1"