[package]
name = "ironmonger"
version = "0.1.0"
edition = "2021"
authors = ["Ewerton Daniel <contact@ewertondaniel.work>"]
description = "A CLI tool for generating and managing cryptographically secure application secrets"
license = "MIT"
repository = "https://github.com/EwertonDaniel/ironmonger"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
mac_address = "1.1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
rand = "0.8"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha3 = "0.10"
hostname = "0.4"

[dev-dependencies]
tempfile = "3.8"